--- a/Couplets/app/views/couplets/show.html.erb
+++ b/Couplets/app/views/couplets/show.html.erb
@@ -17,6 +17,8 @@
     </p>
     <div class="text-center">
       <%= link_to "Back to Couplet feed", couplets_path %>
+      <%= link_to "Edit Couplet", edit_couplet_path(@couplet) %>
+
     </div>
   </div>
 </div>
