functional, all changes after this are to try to add profiles

--- a/app/views/couplets/index.html.erb
+++ b/app/views/couplets/index.html.erb
@@ -5,12 +5,14 @@
     <!-- Shows the couplet -->
     <div>
     <% @couplets.each do |couplet| %>
-
+    <div class="time-ago">
+      <%= time_ago_in_words couplet.created_at %>
+    </div>
     <%= link_to (image_tag couplet.image.url(:medium), class:'img-responsive'), couplet %>
-    <%= couplet.title%>
-    <%= couplet.first_line%>
+    "<%= couplet.title%>"<br>
+    <%= couplet.first_line%><br>
     <%= couplet.last_line%> <br>
-    by <%= couplet.user.user_name %>
+    By <%= couplet.user.user_name %>
     <% if couplet.comments %>
     <% couplet.comments.each do |comment| %>
     <div>
