--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,3 +12,7 @@
  *
 
  */
+ @import "bootstrap-sprockets";
+ @import "bootswatch/cosmo/variables";
+  @import "bootstrap";
+  @import "bootswatch/cosmo/bootswatch";
