--- a/app/views/couplets/show.html.erb
+++ b/app/views/couplets/show.html.erb
@@ -1,37 +1,57 @@
 <body>
-
-  <div>
-    <div class="image center-block">
-      <%= image_tag @couplet.image.url(:medium) %>
-    </div>
-    <p class="title">
-      <%= @couplet.title %>
-    </p>
-    <div class="name">
-      <%= @couplet.user.user_name %>
-    </div>
-    <p class="first_line">
-      <%= @couplet.first_line %>
-    </p>
-    <p class="last_line">
-      <%= @couplet.last_line %>
-    </p>
-    
+  <div class="time-ago">
+    Couplet created <%= time_ago_in_words @couplet.created_at %> ago!
   </div>
-
-
-    <div class="text-center">
-
-      <% if @couplet.user.id == current_user.id %>
-          <div class="text-center edit-links">
-            <%= link_to "Edit Couplet", edit_couplet_path(@couplet) %> <br>
-            <%= link_to "Back to Couplet feed", couplets_path %>
-            </div>
-      <% else %>
-          <div class="text-center edit-links">
-            <%= link_to "Back to Couplet feed", couplets_path %>
+    <div>
+        <div class="image center-block">
+            <%= image_tag @couplet.image.url(:medium) %>
         </div>
-      <% end %>
+        <p class="title">
+            <%= @couplet.title %>
+        </p>
+        <div class="name">
+            By <%= @couplet.user.user_name %>
+        </div>
+        <p class="couplet">
+            <%= @couplet.first_line %><br>
 
-    </div>
-</body>
+            <%= @couplet.last_line %>
+        </p>
+        <% if @couplet.comments %>
+        <% @couplet.comments.each do |comment| %>
+        <div>
+            <div>
+                <%= comment.user.user_name %>
+            </div>
+            <div >
+                <%= comment.substance %>
+            </div>
+            <% if comment.user == current_user %>
+            <%= link_to 'Delete Comment', couplet_comment_path(@couplet, comment), method: :delete, data: { confirm: "Are you sure?" } %>
+            <% end %>
+        </div>
+        <% end %>
+        <% end %>
+        <div >
+            <%= form_for [@couplet, @couplet.comments.new] do |f| %>
+            <%= f.text_field :substance, placeholder: 'Add a comment...' %>
+            <% end %>
+
+        </div>
+
+        <div class="text-center">
+
+            <% if @couplet.user.id == current_user.id %>
+            <div class="text-center edit-links">
+                <%= link_to "Edit Couplet", edit_couplet_path(@couplet) %>
+                <br>
+                <%= link_to "Back to Couplet feed", couplets_path %>
+            </div>
+        <% else %>
+            <div class="text-center edit-links">
+                <%= link_to "Back to Couplet feed", couplets_path %>
+            </div>
+            <% end %>
+
+        </div>
+    </body>
