--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,11 +1,6 @@
 <nav class="navbar navbar-default">
     <div class="navbar-container">
         <div class="navbar-header">
-            <button class="navbar-toggle collapsed" data-target="#bs-navbar-collapse-1" data-toggle="collapse" type="button">
-                <span class="sr-only">Toggle Navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
             <div class="navbar-brand">
                 <%= link_to "Couplets with Strangers!", root_path %>
             </div>
@@ -16,6 +11,22 @@
                 <li>
                     <%= link_to "New Couplet", new_couplet_path %>
                 </li>
+                <li>
+                    <%= link_to "Edit Profile", edit_user_registration_path %>
+                </li>
+                
+
+                <li class="dropdown">
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Profile <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                    <li><a href="#">View Profile</a></li>
+                    <li><a href="#">Edit Profile</a></li>
+
+                    <li role="separator" class="divider"></li>
+                    <li><a href="#">Logout</a></li>
+                </ul>
+                </li>
+
                 <li>
                     <%= link_to "Logout", destroy_user_session_path, method: :delete %>
                 </li>
