--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -2,7 +2,7 @@
     <div class="navbar-container">
         <div class="navbar-header">
             <div class="navbar-brand">
-                <%= link_to "Couplets with Strangers!", root_path %>
+                <%= link_to "Couplets for friends!", root_path %>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="bs-navbar-collapse-1">
@@ -14,7 +14,7 @@
                 <li>
                     <%= link_to "Edit Profile", edit_user_registration_path %>
                 </li>
-                
+
 
                 <li class="dropdown">
                       <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Profile <span class="caret"></span></a>
