--- a/app/views/couplets/edit.html.erb
+++ b/app/views/couplets/edit.html.erb
@@ -1,7 +1,12 @@
-<%= image_tag @couplet.image.url(:medium) %>
+
+<div class="text-center">
+    <%= image_tag @couplet.image.url(:medium) %>
+</div>
 
 <%= render 'form'  %>
 
+<div class="text-center">
 <%= link_to "Delete Couplet", couplet_path(@couplet), method: :delete, data: { confirm: "Are you sure you want to delete this couplet?" } %>
-
+<br>
 <%= link_to 'Back', couplets_path %>
+</div>
