--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,35 +1,48 @@
 <nav class="navbar navbar-default">
-    <div class="navbar-container">
+    <div class="container-fluid">
         <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
             <div class="navbar-brand">
                 <%= link_to "Couplets for friends!", root_path %>
             </div>
         </div>
+
         <div class="collapse navbar-collapse" id="bs-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <% if user_signed_in? %>
                 <li>
                     <%= link_to "New Couplet", new_couplet_path %>
                 </li>
-                <li>
-                    <%= link_to "Edit Profile", edit_user_registration_path %>
-                </li>
 
 
                 <li class="dropdown">
-                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Profile <span class="caret"></span></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Profile
+                        <span class="caret"></span>
+                    </a>
                     <ul class="dropdown-menu">
-                    <li><a href="#">View Profile</a></li>
-                    <li><a href="#">Edit Profile</a></li>
+                        <li>
+                            <%= link_to "View Profile", profile_path(current_user.user_name) %>
+                        </li>
+                        <li>
+                            <%= link_to "Edit Profile", edit_profile_path(current_user.user_name) %>
+                        </li>
+                        <li>
+                            <%= link_to "Edit Account", edit_user_registration_path %>
+                        </li>
 
-                    <li role="separator" class="divider"></li>
-                    <li><a href="#">Logout</a></li>
-                </ul>
+                        <li role="separator" class="divider"></li>
+                        <li>
+                            <%= link_to "Logout", destroy_user_session_path, method: :delete %>
+                        </li>
+                    </ul>
                 </li>
 
-                <li>
-                    <%= link_to "Logout", destroy_user_session_path, method: :delete %>
-                </li>
+
             <% else %>
                 <li>
                     <%= link_to "Login", new_user_session_path %>
