--- a/app/views/couplets/show.html.erb
+++ b/app/views/couplets/show.html.erb
@@ -15,9 +15,11 @@
                     <%= image_tag @couplet.image.url(:medium) %>
                 </div>
                 <div class="couplet-bottom">
+                  <div class="title">
+                    "<%= @couplet.title%>"<br>
+                  </div>
                     <p class="lines">
-                        "<%= @couplet.title%>"<br>
-                        
+
                         <%= @couplet.first_line%><br>
                         <%= @couplet.last_line%>
 
@@ -47,6 +49,7 @@
                     <div class="comment-form">
                         <%= form_for [@couplet, @couplet.comments.new] do |f| %>
                         <%= f.text_field :substance, placeholder: 'Add a comment...' %>
+                        <%= f.submit "Submit comment" %>
                         <% end %>
 
                     </div>
