--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -43,8 +43,11 @@
       </div>
 
       <div class="couplet-bottom">
+        <div class="title">
+          "<%= couplet.title%>"<br>
+        </div>
           <p class="lines">
-              "<%= couplet.title%>"<br>
+
 
               <%= couplet.first_line%><br>
               <%= couplet.last_line%>
