--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,20 +4,20 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :user_name, required: true %>
-    <%= f.input :email, required: true, autofocus: true %>
+    <%= f.input :user_name, required: true, input_html: {class:"form-control"} %>
+    <%= f.input :email, required: true, autofocus: true, input_html: {class:"form-control"} %>
 
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
       <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
     <% end %>
 
-    <%= f.input :password, autocomplete: "off", hint: "leave it blank if you don't want to change it", required: false %>
-    <%= f.input :password_confirmation, required: false %>
-    <%= f.input :current_password, hint: "we need your current password to confirm your changes", required: true %>
+    <%= f.input :password, autocomplete: "off", hint: "leave it blank if you don't want to change it", required: false, input_html: {class:"form-control"} %>
+    <%= f.input :password_confirmation, required: false, input_html: {class:"form-control"} %>
+    <%= f.input :current_password, hint: "we need your current password to confirm your changes", required: true, input_html: {class:"form-control"} %>
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Update" %>
+    <%= f.button :submit, "Update", input_html: {class:"form-control"} %>
   </div>
 <% end %>
 
