--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,10 +4,10 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :user_name, required: true %>
-    <%= f.input :email, required: true, autofocus: true %>
-    <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
-    <%= f.input :password_confirmation, required: true %>
+    <%= f.input :user_name, required: true, input_html: {class:"form-control"} %>
+    <%= f.input :email, required: true, autofocus: true, input_html: {class:"form-control"} %>
+    <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length), input_html: {class:"form-control"} %>
+    <%= f.input :password_confirmation, required: true, input_html: {class:"form-control"} %>
   </div>
 
   <div class="form-actions">
