--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -11,7 +11,7 @@
           <%= @user.user_name %>
         </h3>
         <span>
-          <% if @user == current_user %>
+          <% if @user == current_user || current_user.admin? %>
             <%= link_to 'Edit Profile', edit_profile_path(@user.user_name),class: 'btn edit-button' %>
 
             <% end %>
@@ -68,7 +68,7 @@
                   <%= comment.substance %>
               </div>
               <div>
-              <% if comment.user == current_user %>
+              <% if comment.user == current_user || current_user.admin? %>
               <%= link_to 'Delete Comment', couplet_comment_path(couplet, comment), method: :delete, data: { confirm: "Are you sure?" } %>
               <% end %>
             </div>
