--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,13 +1,13 @@
-<h2>Sign up</h2>
+<h2 class="text-center">Sign up</h2>
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :user_name, required: true, input_html: {class:"form-control"} %>
-    <%= f.input :email, required: true, autofocus: true, input_html: {class:"form-control"} %>
-    <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length), input_html: {class:"form-control"} %>
-    <%= f.input :password_confirmation, required: true, input_html: {class:"form-control"} %>
+    <%= f.input :user_name, required: true, autofocus: true, placeholder: 'User Name', input_html: {class:"form-control"} %>
+    <%= f.input :email, required: true, autofocus: true, placeholder: 'Email', input_html: {class:"form-control"} %>
+    <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length), autofocus: true, placeholder: 'Password', input_html: {class:"form-control"} %>
+    <%= f.input :password_confirmation, required: true, autofocus: true, placeholder: 'Confirm Password', input_html: {class:"form-control"} %>
   </div>
 
   <div class="form-actions">
