--- a/app/views/couplets/index.html.erb
+++ b/app/views/couplets/index.html.erb
@@ -1,6 +1,6 @@
-<h1 class="text-center">
-    Couplets for friends!
-</h1>
+<h2 class="text-center">
+    Create a quick two line poem (a couplet) by clicking the link above or scroll through the feed to see what other people have created!
+</h2>
 
 <body>
     <div>
